--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
                 <a class="nav-link" href="#">La carte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Les réservations</a>
+                <a class="nav-link" href="/allbookings">Les réservations</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mon compte</a>
+                <a class="nav-link" href="/account">Mon compte</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/signin">Connexion</a>
+              </li>
+              <li class="nav-item">
+                <button class="nav-link" id="btn-signout">Déconnexion</button>
               </li>
             </ul>
           </div>
@@ -69,6 +72,7 @@
     </div>
   </footer>
 
+  <script src="js/script.js"></script>
   <script type="module" src="Router/Router.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
