--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -62,7 +62,7 @@
           <form>
               <div class="mb-3">
                <p>Titre</p>
-               <img src="../images/gaelle-jeune.jpg" class="rounded w-100" alt="Gaelle jeune"/>
+               <img src="../images/repas.jpg" class="rounded w-100" alt="Gaelle jeune"/>
               </div>
               <div class="text-center">
                   <button type="button" class="btn btn-danger">Supprimer</button>
