--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,7 @@
                 </p>
             </div>
             <div class="col">
-                <img class="w-100 rounded" src="../images/gaelle-jeune.jpg"/>
+                <img class="w-100 rounded" src="../images/chef.jpg"/>
             </div>
         </div>
         <div class="text-center pt-4">
@@ -32,7 +32,7 @@
         <h2 class="text-center text-primary">Des produits frais</h2>
         <div class="row row-cols-2 align-items-center">
             <div class="col">
-                <img class="w-100 rounded" src="../images/orfeo.jpg"/>
+                <img class="w-100 rounded" src="../images/plats.jpg"/>
             </div>
             <div class="col">
                 <p class="text-justify">
@@ -56,7 +56,7 @@
                 </p>
             </div>
             <div class="col">
-                <img class="w-100 rounded" src="../images/quartier-chinois.jpg"/>
+                <img class="w-100 rounded" src="../images/salle.jpg"/>
             </div>
         </div>
         <div class="text-center pt-4">
