--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -8,7 +8,9 @@
 
 <div class="container">
   <div class="text-center">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal" data-show="admin">Ajouter une photo</button>
+
+    <!-- on devrait rajouter cet attribut au bouton data-show="admin" -->
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal">Ajouter une photo</button>
   </div>
 
   <div class="row row-cols-2 row-cols-lg-3" id="allImages">
