--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -10,7 +10,7 @@
   <div class="text-center">
 
     <!-- on devrait rajouter cet attribut au bouton data-show="admin" -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal">Ajouter une photo</button>
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#EditionPhotoModal" data-show="disconnected">Ajouter une photo</button>
   </div>
 
   <div class="row row-cols-2 row-cols-lg-3" id="allImages">
